--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Alexander Lyotov <sippie84@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.85.1"
+uvicorn = {extras = ["standerd"], version = "^0.19.0"}
 
 [tool.poetry.dev-dependencies]
 
