--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Alexander Lyotov <sippie84@gmail.com>"]
 python = "^3.9"
 fastapi = "^0.85.1"
 uvicorn = {extras = ["standerd"], version = "^0.19.0"}
+SQLAlchemy = "^1.4.42"
 
 [tool.poetry.dev-dependencies]
 
