--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.85.1"
 uvicorn = {extras = ["standerd"], version = "^0.19.0"}
 SQLAlchemy = "^1.4.42"
 aiosqlite = "^0.17.0"
+greenlet = "^1.1.3"
 
 [tool.poetry.dev-dependencies]
 
